# test_myrouter_PDtree

./: CMakeLists.txt  EDCompute.cpp  ExperimentConfig.cpp  ExperimentConfig.h  ExperimentSummaryWriter.cpp  NetInfoWriter.cpp  PDTreeRouter.cpp  PDTreeRouter.h  PlotDataWriter.cpp  PlotDataWriter.h  README.md  RouterDB.cpp  RouterDB.h  main.cpp
configs/: baseline.json  proposed_default.json  proposed_high_hbt_rc.json  proposed_high_routing_rc.json  proposed_low_hbt_rc.json  proposed_low_routing_rc.json
scripts/: plot_3d_nets.py  plot_nets.py  run_gcd_experiments.sh
