cmake_minimum_required(VERSION 3.16)
project(pdtree_experiment LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(OPENROAD_HOME "" CACHE PATH "OpenROAD install/source path")
set(OPENDB_INCLUDE_DIR "" CACHE PATH "OpenDB include dir")
set(OPENDB_LIB "" CACHE FILEPATH "OpenDB lib path")
add_executable(pdtree_experiment Parser.cpp RouterDB.cpp Grid.cpp PDTreeRouter.cpp EDCompute.cpp RCDefaults.cpp ExperimentConfig.cpp ExperimentSummaryWriter.cpp NetInfoWriter.cpp PlotDataWriter.cpp main.cpp)
target_include_directories(pdtree_experiment PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
if(OPENROAD_HOME)
  target_include_directories(pdtree_experiment PRIVATE ${OPENROAD_HOME}/include ${OPENROAD_HOME}/src ${OPENROAD_HOME}/src/odb/include)
endif()
if(OPENDB_INCLUDE_DIR)
  target_include_directories(pdtree_experiment PRIVATE ${OPENDB_INCLUDE_DIR})
endif()
if(OPENDB_LIB)
  target_link_libraries(pdtree_experiment PRIVATE ${OPENDB_LIB})
else()
  target_link_libraries(pdtree_experiment PRIVATE odb)
endif()
